# DgAclOp

./: CMakeLists.txt  readme.txt  run.sh
cmake/: config.cmake
cmake/util/: aicpu_parser_ini.py  insert_op_info.py  parse_ini_to_json.py
cmake/util/makeself/: README.md  makeself.1  makeself.lsm
cpukernel/: CMakeLists.txt  toolchain.cmake
cpukernel/context/: CMakeLists.txt  module.mk
cpukernel/context/common/: async_cpu_kernel.cc  async_cpu_kernel.h  async_event_util.cc  async_event_util.h  context.cc  cpu_kernel_cache.cc  cpu_kernel_cache.h  cpu_kernel_register.cc  cpu_kernel_utils.cc  device.cc  device.h  device_cpu_kernel.cc  device_cpu_kernel.h  device_sharder.cc  device_sharder.h  eigen_threadpool.cc  eigen_threadpool.h  host_sharder.cc  host_sharder.h  kernel_cache.h  log.h  node_def_builder.cpp  notification.h  session_cache.h  sharder.h  status.h  thread_ctx.h
cpukernel/context/cpu_proto/: attr_value.cc  attr_value_impl.cc  attr_value_impl.h  node_def.cc  node_def_impl.cc  node_def_impl.h  tensor.cc  tensor_impl.cc  tensor_impl.h  tensor_shape.cc  tensor_shape_impl.cc  tensor_shape_impl.h
cpukernel/context/cpu_proto/proto/: cpu_attr.proto  cpu_node_def.proto  cpu_tensor.proto  cpu_tensor_shape.proto
cpukernel/context/inc/: cpu_kernel_register.h  cpu_kernel_utils.h  cpu_node_def.h  node_def_builder.h
cpukernel/context/stub/: CMakeLists.txt  aicpu_async_event.h  aicpu_context.h  aicpu_sharder.cc  aicpu_sharder.h
cpukernel/impl/: face_align_kernels.cc  face_align_kernels.h  vega_crop_resize_kernels.cc  vega_crop_resize_kernels.h  vega_transform_kernels.cc  vega_transform_kernels.h  vega_type.h  vega_warp_affine_kernels.cc  vega_warp_affine_kernels.h  warp_affine_kernels.cc  warp_affine_kernels.h
cpukernel/op_info_cfg/aicpu_kernel/: face_align.ini  vega_crop_resize.ini  vega_transform.ini  vega_warp_affine.ini  warp_affine.ini
framework/: CMakeLists.txt
framework/common/: fmk_error_codes.h  fmk_types.h  ge_inner_error_codes.h  ge_types.h  op_types.h  scope_guard.h  string_util.h  types.h  util.h
framework/common/debug/: ge_log.h  log.h
framework/common/op/: attr_value_util.h  ge_op_utils.h  op_parser_util.h
framework/omg/: omg.h  omg_inner_types.h  omg_types.h  version.h
framework/omg/parser/: model_parser.h  op_parser.h  parser_api.h  parser_factory.h  parser_inner_ctx.h  parser_types.h  weights_parser.h
framework/tf_plugin/: CMakeLists.txt  tensorflow_face_align_plugin.cc  tensorflow_vega_crop_resize_plugin.cc  tensorflow_vega_transform_plugin.cc  tensorflow_vega_warp_affine_align_plugin.cc  tensorflow_warp_affine_align_plugin.cc
log/: op_log.h
metadef/graph/: CMakeLists.txt  aligned_ptr.cc  anchor.cc  any_value.cc  ascend_string.cc  attr_store.cc  attr_value.cc  buffer.cc  buffer_impl.h  compute_graph.cc  compute_graph_impl.h  format_refiner.cc  format_refiner.h  ge_attr_define.cc  ge_attr_value.cc  ge_tensor.cc  ge_tensor_impl.h  gnode.cc  graph.cc  inference_context.cc  model.cc  model_serialize.cc  node.cc  node_impl.h  op_desc.cc  op_desc_impl.h  operator.cc  operator_factory.cc  operator_factory_impl.cc  ref_relation.cc  resource_context_mgr.cc  runtime_inference_context.cc  shape_refiner.cc  small_vector.cc  tensor.cc  types.cc
metadef/graph/debug/: ge_log.h  ge_op_types.h  ge_util.h  graph_debug.cc  graph_debug.h
metadef/graph/detail/: attributes_holder.cc
metadef/register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  host_cpu_context.cc  infer_data_slice_registry.cc  op_kernel_registry.cpp  ops_kernel_builder_registry.cc  prototype_pass_registry.cc  register.cpp  register_format_transfer.cc  register_pass.cpp  tensor_assign.cpp
op_proto/: CMakeLists.txt  face_align.cc  face_align.h  vegaCropResize.cc  vegaCropResize.h  vegaTransform.cc  vegaTransform.h  vegaWarpAffine.cc  vegaWarpAffine.h  warpAffine.cc  warpAffine.h
op_proto/inc/: aipp.h  all_ops.h  array_ops.h  audio_ops.h  avg_pool_1d_ops.h  batch_ops.h  bitwise_ops.h  boosted_trees_ops.h  candidate_sampling_ops.h  case_condition_ops.h  cluster.h  condtake_ops.h  control_flow_ops.h  coordinates_1d_to_2d_ops.h  correlation.h  ctc_ops.h  data_flow_ops.h  elewise_calculation_ops.h  functional_ops.h  get_data_ops.h  hcom_ops.h  hvd_ops.h  image_ops.h  index_to_addr_ops.h  internal_ops.h  linalg_ops.h  list_ops.h  logging_ops.h  lookup_ops.h  math_ops.h  matrix_calculation_ops.h  nn_batch_norm_ops.h  nn_calculation_ops.h  nn_detect_ops.h  nn_norm_ops.h  nn_ops.h  nn_pooling_ops.h  nn_training_ops.h  no_op.h  nonlinear_fuc_ops.h  (+30 more)
op_proto/util/: array_ops_shape_fns.cc  array_ops_shape_fns.h  axis_util.cc  axis_util.h  candidate_sampling_shape_fns.cc  candidate_sampling_shape_fns.h  common_shape_fns.cc  common_shape_fns.h  error_code.h  error_util.cc  error_util.h  images_ops_shape_fns.cc  images_ops_shape_fns.h  linalg_ops_shape_fns.cc  linalg_ops_shape_fns.h  lookup_ops_shape_fns.cc  lookup_ops_shape_fns.h  nn_shape_fns.cc  nn_shape_fns.h  op_common_util.h  ragged_conversion_ops_shape_fns.cc  ragged_conversion_ops_shape_fns.h  random_ops_shape_fns.cc  random_ops_shape_fns.h  reduce_infer_util.cc  reduce_infer_util.h  resource_variable_ops_shape_fns.cc  resource_variable_ops_shape_fns.h  transfer_shape_according_to_format.cc  transfer_shape_according_to_format.h  util.cc  util.h  vector_proto_profiling.h
op_tiling/: CMakeLists.txt
scripts/: install.sh
testcases/: CMakeLists.txt
testcases/ut/aicpu_test/cast/: CMakeLists.txt  test_cast_impl.cc
testcases/ut/aicpu_test/less/: CMakeLists.txt  test_less_impl.cc
testcases/ut/aicpu_test/sparse_to_dense/: CMakeLists.txt  test_sparse_to_dense_impl.cc
testcases/ut/aicpu_test/where/: CMakeLists.txt  test_where_impl.cc
verdify_mdl_op/model/: trans.sh
verdify_mdl_op/src/: AclProcess.h  CMakeLists.txt  ModelProcess.h
verdify_op/model/: FaceAlign.json
verdify_op/src/: AclProcess.cpp  ModelProcess.cpp  main.cpp
verdify_op_CompileAndExecute/: CMakeLists.txt
verdify_op_CompileAndExecute/src/: AclProcess.cpp  AclProcess.h  CMakeLists.txt  ModelProcess.cpp  ModelProcess.h  main.cpp
(+183 files in other folders)
