# Copyright (c) Huawei Technologies Co., Ltd. 2020-2021. All rights reserved.
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_C_COMPILER gcc)

# add source files
aux_source_directory(. SRCS)

if("x${SRCS}" STREQUAL "x")
    add_custom_target(${OP_TILING_TARGET}
            COMMAND mkdir -p ${OP_TILING_TARGET_OUT_DIR}
            COMMAND echo "no source to make lib${OP_TILING_TARGET}.so")
    return(0)
endif()

set(LIBRARY_OUTPUT_PATH ${OP_TILING_TARGET_OUT_DIR})

message( STATUS "OP_TILING_TARGET=${OP_TILING_TARGET}")
add_library(${OP_TILING_TARGET} SHARED ${SRCS})

target_link_libraries(${OP_TILING_TARGET} ${ASCEND_INC}/../lib64/libgraph.so)
